--- a/app/src/main/res/layout/recycler_chat_your_item.xml
+++ b/app/src/main/res/layout/recycler_chat_your_item.xml
@@ -13,13 +13,18 @@
         android:layout_marginRight="100dp"
         android:gravity="center_vertical">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/tv_chatyouritem_contents"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:padding="8dp"
-            android:background="@color/colorPrimary"
+            android:layout_marginHorizontal="10dp"
+            android:padding="12dp"
+            android:background="@drawable/chat_you_background"
             android:gravity="center_vertical"
             android:text="@{chatData.message}"
             android:textColor="#FFFFFF" />
