--- a/app/src/main/res/layout/recycler_chat_your_item.xml
+++ b/app/src/main/res/layout/recycler_chat_your_item.xml
@@ -14,11 +14,14 @@
         android:gravity="center_vertical">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:id="@+id/iv_yourchatitem_profile"
+            android:paddingTop="8dp"
+            setProfileImage="@{chatData.profile}"
+            android:layout_width="56dp"
+            android:layout_height="56dp" />
 
         <TextView
-            android:id="@+id/tv_chatyouritem_contents"
+            android:layout_toRightOf="@+id/iv_yourchatitem_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
