--- a/app/src/main/res/layout/recycler_chat_my_item.xml
+++ b/app/src/main/res/layout/recycler_chat_my_item.xml
@@ -18,7 +18,7 @@
         <TextView
             android:id="@+id/tv_chatmyitem_contents"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="8dp"
