--- a/app/src/main/res/layout/recycler_chat_your_item.xml
+++ b/app/src/main/res/layout/recycler_chat_your_item.xml
@@ -1,45 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
-        <variable
-            name="chatData"
-            type="com.song2.chatting.data.ChatData" />
-    </data>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="100dp"
+    android:gravity="center_vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/iv_yourchatitem_profile"
+        android:src="@color/colorPrimaryLight"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:paddingTop="8dp" />
+
+    <TextView
+        android:id="@+id/tv_yourchatitem_message"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="100dp"
-        android:gravity="center_vertical">
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_toEndOf="@+id/iv_yourchatitem_profile"
+        android:background="@drawable/chat_you_background"
+        android:gravity="center_vertical"
+        android:padding="12dp"
+        android:text="만나서 반가워요~"
+        android:textColor="#FFFFFF" />
 
-        <ImageView
-            android:id="@+id/iv_yourchatitem_profile"
-            android:paddingTop="8dp"
-            setProfileImage="@{chatData.profile}"
-            android:layout_width="56dp"
-            android:layout_height="56dp" />
-
-        <TextView
-            android:id="@+id/tv_yourfhatitem_message"
-            android:layout_toRightOf="@+id/iv_yourchatitem_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginHorizontal="10dp"
-            android:padding="12dp"
-            android:background="@drawable/chat_you_background"
-            android:gravity="center_vertical"
-            android:text="@{chatData.message}"
-            android:textColor="#FFFFFF" />
-
-        <TextView
-            android:layout_below="@+id/tv_yourfhatitem_message"
-            android:layout_alignStart="@+id/tv_yourfhatitem_message"
-            android:layout_marginStart="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{chatData.user}"
-            android:textColor="#b6b8c3" />
-    </RelativeLayout>
-</layout>
+    <TextView
+        android:id="@+id/tc_yourchatitem_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_yourchatitem_message"
+        android:layout_alignStart="@+id/tv_yourchatitem_message"
+        android:layout_marginStart="8dp"
+        android:text="양승희"
+        android:textColor="#b6b8c3" />
+</RelativeLayout>
