--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -8,11 +8,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_chatact_chatlist"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="100dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <RelativeLayout
+        android:id="@+id/rl_chatact_container"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@color/colorPrimaryLight"
