--- a/app/src/main/res/layout/recycler_chat_your_item.xml
+++ b/app/src/main/res/layout/recycler_chat_your_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable
@@ -7,7 +8,7 @@
             type="com.song2.chatting.data.ChatData" />
     </data>
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="100dp"
@@ -15,31 +16,36 @@
 
         <ImageView
             android:id="@+id/iv_yourchatitem_profile"
-            android:paddingTop="8dp"
             setProfileImage="@{chatData.profile}"
             android:layout_width="56dp"
-            android:layout_height="56dp" />
+            android:layout_height="56dp"
+            android:paddingTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_yourfhatitem_message"
-            android:layout_toRightOf="@+id/iv_yourchatitem_profile"
+            android:id="@+id/tv_yourchatitem_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginHorizontal="10dp"
-            android:padding="12dp"
             android:background="@drawable/chat_you_background"
             android:gravity="center_vertical"
+            android:layout_marginTop="4dp"
+            android:padding="12dp"
             android:text="@{chatData.message}"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            app:layout_constraintStart_toEndOf="@+id/iv_yourchatitem_profile"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_below="@+id/tv_yourfhatitem_message"
-            android:layout_alignStart="@+id/tv_yourfhatitem_message"
-            android:layout_marginStart="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{chatData.user}"
-            android:textColor="#b6b8c3" />
-    </RelativeLayout>
+            android:textColor="#b6b8c3"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tv_yourchatitem_message"
+            app:layout_constraintTop_toBottomOf="@+id/tv_yourchatitem_message" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
