--- a/app/src/main/res/layout/recycler_chat_my_item.xml
+++ b/app/src/main/res/layout/recycler_chat_my_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_vertical"
     android:layout_height="wrap_content"
     android:layout_marginLeft="100dp"
@@ -10,12 +10,14 @@
         android:id="@+id/tv_chatmyitem_contents"
         android:background="@drawable/chat_me_background"
         android:gravity="center_vertical"
-        android:layout_alignParentRight="true"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="8dp"
         android:layout_width="wrap_content"
         android:padding="12dp"
-        android:text="좋은 하루에요!" />
+        android:text="좋은 하루에요!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
