--- a/app/src/main/res/layout/recycler_chat_your_item.xml
+++ b/app/src/main/res/layout/recycler_chat_your_item.xml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="100dp"
+    android:layout_marginTop="4dp"
     android:gravity="center_vertical">
 
     <ImageView
         android:id="@+id/iv_yourchatitem_profile"
-        android:src="@color/colorPrimaryLight"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:paddingTop="8dp" />
+        android:src="@color/colorPrimaryLight"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_yourchatitem_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_toEndOf="@+id/iv_yourchatitem_profile"
+        android:layout_marginTop="4dp"
         android:background="@drawable/chat_you_background"
-        android:gravity="center_vertical"
         android:padding="12dp"
         android:text="만나서 반가워요~"
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toEndOf="@+id/iv_yourchatitem_profile"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tc_yourchatitem_user"
@@ -34,5 +39,8 @@
         android:layout_alignStart="@+id/tv_yourchatitem_message"
         android:layout_marginStart="8dp"
         android:text="양승희"
-        android:textColor="#b6b8c3" />
-</RelativeLayout>
+        android:textColor="#b6b8c3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tv_yourchatitem_message"
+        app:layout_constraintTop_toBottomOf="@+id/tv_yourchatitem_message" />
+</androidx.constraintlayout.widget.ConstraintLayout>
